[tool.poetry]
name = "get-better"
version = "0.1.0"
description = ""
authors = ["andreas-lloyd <andreas.mathew.lloyd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.34.0"
google-auth = "^2.3.3"
google-auth-oauthlib = "^0.4.6"
google-auth-httplib2 = "^0.1.0"
Flask = "^2.0.2"
requests = "^2.27.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
